--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1341,6 +1341,9 @@ header
           border-color rgba(0,0,0,.4)
           outline none !important
 /*PROFILE*/
+.panel-title > span > label
+  cursor pointer
+  font-family 'Roboto Slab'
 .ca-phone
   text-align left
 .ca-auth
