--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -97,15 +97,15 @@
                         </div>
 
                     </div>
-                    <div class="col-md-12" ng-if="idUser">
+                    <!--<div class="col-md-12" ng-if="idUser">
                         <input type="checkbox"><span>Guardar mi información para la aproxima ocasión</span>
                         {{Shipping.saveAddressNew}}
-                    </div>
+                    </div>-->
                 </form>
             </div>
             <div class="col-md-12 text-left" style="margin-top: 20px;">
                 <div class="col-md-6">
-                    <a href="" class="btn btn-gray-clear" ui-sref="shopcart" style="background: #eee;">Regresar al carrito</a>
+                    <a class="btn btn-cart" ui-sref="shopcart">Regresar al carrito</a>
                 </div>
                 <div class="col-md-6">
                     <!--<button class="btn btn-cart" ng-disabled="Form.$invalid" ng-click="Order.createOrder()">Continuar</button>-->
