--- a/app/templates/shop/shipping.html
+++ b/app/templates/shop/shipping.html
@@ -1,7 +1,7 @@
 <div id="content-area">
     <div class="container">
         <div class="col-md-6 address-form">
-            <div class="col-md-12 select-address" style="margin-bottom: 20px">
+            <div class="col-md-12 select-address" style="margin-bottom: 20px" ng-if="!Payment.addresses">
                 <h3><i class="ion-ios-location-outline"></i></a> Seleccionar dirección existente</h3>
                 <ng-include src="'/templates/shop/shipping-address.html'"></ng-include>
             </div>
