--- a/app/templates/shop/partials/purchase-completed.html
+++ b/app/templates/shop/partials/purchase-completed.html
@@ -1,10 +1,86 @@
 <div id="content-area">
     <div class="container">
-        <h1>Gracias por tu compra en corriente alterna.</h1>
-
-        <p>Te enviamos un correo a correo@correo.com, con los datos para el deposito</p>
-
-        <p>Por tu compra de</p>
-        <p><button class="btn btn-success btn-cart" ui-sref="home">Regresar al inicio</button></p>
+        <div class="col-md-offset-2 col-md-8">
+            <h2 class="text-center">{{ Purchase.purchase.customerName }}</h2>
+            <hr>
+            <div class="col-md-6">
+                <p class="text-left">Gracias por tu compra en Corriente Alterna:),
+                    Te enviamos un correo a {{ Purchase.purchase.customerEmail }},
+                    con los datos para el deposito</p>
+            </div>
+            <div class="col-md-6">
+                <h4>Numero de pedido: <span>{{ Purchase.order.id }}</span></h4>
+                <span>Realizado el {{ Purchase.purchase.createdAt | date: 'd/M/y' }}</span>
+            </div>
+        </div>
+        <div class="col-md-offset-2 col-md-8" style="margin-top: 10px">
+            <div class="payment-sidebar">
+                <div class="row">
+                    <div class="">
+                        <div class="table-responsive">
+                            <table class="table table-bordered">
+                                <thead>
+                                <tr>
+                                    <th width="5%">Cantidad</th>
+                                    <th width="50%">Descripción</th>
+                                    <th>Precio unitario</th>
+                                    <th>Importe</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="item in Purchase.purchase.items">
+                                    <th scope="row">{{item.qty}}</th>
+                                    <td>{{item.itemId}} - {{item.name}}</td>
+                                    <td>{{item.price | currency}}</td>
+                                    <td ng-if="item.subtotalDiscount">{{item.subtotalDiscount | currency}}
+                                        <span class="glyphicon  glyphicon-exclamation-sign">
+                                            <md-tooltip md-direction="right">Este producto tuvo {{item.promotion | currency}} de descuento.</md-tooltip></span></p>
+                                    </td>
+                                    <td ng-if="!item.subtotalDiscount">{{item.subtotal | currency}}</td>
+                                </tr>
+                                <tr>
+                                    <th style="text-align: right;" colspan="3">Descuento</th>
+                                    <td>{{Purchase.purchase.promoTotal | currency}}</td>
+                                </tr>
+                                <tr>
+                                    <th style="text-align: right;" colspan="3">Subtotal</th>
+                                    <td>{{Purchase.purchase.subTotal | currency}}</td>
+                                </tr>
+                                <tr>
+                                    <th colspan="3" style="text-align: right;">IVA</th>
+                                    <td>{{Purchase.purchase.taxTotal | currency}}</td>
+                                </tr>
+                                <tr>
+                                    <th colspan="3" style="text-align: right;">TOTAL</th>
+                                    <td>{{Purchase.purchase.total | currency}}</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="destination">
+                    <h4>Direccion de entrega:</h4>
+                    <p>{{ Purchase.purchase.destination.address}}, Col: {{Purchase.purchase.destination.neighborhood}},
+                    CP: {{ Purchase.purchase.destination.zip }}, {{ Purchase.purchase.destination.cityName }}, {{ Purchase.purchase.destination.stateName }}</p>
+                </div>
+                <hr>
+                <div class="instructionPayment" ng-if="Purchase.purchase.paymentType==6">
+                    <h4>Información de deposito</h4>
+                    <p>Cuenta: {{ Purchase.purchase.metadata.instructionsPayment.account }}</p>
+                    <p>Clabe: {{ Purchase.purchase.metadata.instructionsPayment.clabe}}</p>
+                    <p>Banco: {{ Purchase.purchase.metadata.instructionsPayment.bank}}</p>
+                </div>
+                <div class="payment-mount">
+                    <div class="pull-right btn-inv">
+                        <button title="Regresar a mis compras" class="btn btn-md btn-gray-clear"
+                                ui-sref="sales">
+                            <i class="fa fa-angle-left"></i> Regresar
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
